--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Vue Example with FuseBox</title>
+        <link rel="stylesheet" href="app.css">
     </head>
     <body>
         <div id="app"></div>
